--- a/ui.html
+++ b/ui.html
@@ -2,11 +2,12 @@
 <script>
     onmessage = event => {
         if(event.data.pluginMessage.copiedText){
-            var textarea = document.getElementsByTagName("textarea")[0];
-            textarea.value = event.data.pluginMessage.copiedText;
+            let textarea = document.getElementsByTagName("textarea")[0];
+            let copiedText = event.data.pluginMessage.copiedText;
+            textarea.value = copiedText;
             textarea.select();
             document.execCommand("copy");
-            parent.postMessage({ pluginMessage: { quit: true } }, '*');
+            parent.postMessage({ pluginMessage: { quit: true, text: copiedText } }, '*');
         }
 
         if(event.data.pluginMessage.paste){
