Temporary fix for inoperability

--- a/ui.html
+++ b/ui.html
@@ -1,11 +1,11 @@
 <style>
     body {
-        background: #222;
+        background: #fff;
         margin: 0;
         padding: 20px;
         font-family: sans-serif;
         font-size: 14px;
-        color: #fff;
+        color: #222;
     }
     textarea {
         height:1px;
@@ -15,10 +15,10 @@
         opacity:0;
     }
     select, input {
-        background: #333;
-        border: 1px solid #444;
+        background: #eee;
+        border: 1px solid #ddd;
         border-radius: 3px;
-        color: #fff;
+        color: #222;
         font-size: 16px;
         line-height: 30px;
         height: 30px;
@@ -27,21 +27,21 @@
     }
     .copyright {
         font-size: 11px;
-        color: #666;
+        color: #999;
         margin-top: 20px;
         text-align: center;
     }
     .copyright a {
-        color: #666;
+        color: #999;
         text-decoration: none;
     }
     .copyright a:hover {
-        color: #999;
+        color: #666;
     }
     .setting-item {
         padding-bottom: 20px;
         margin-bottom: 20px;
-        border-bottom: 1px solid #333;
+        border-bottom: 1px solid #ddd;
         text-align: right;
     }
 </style>
